# jana

./: .gitignore  AGENTS.md  README.md  bump_version.py  pyproject.toml
.github/helper/: install.sh  site_config.json
.github/workflows/: ci.yml  tests.yml
docs/: CHANGELOG.md  agents.md  api-reference.md  configuration.md  developer-guide.md  faq.md  getting-started.md  how-jana-works.md  language-support.md  llm-guardrails.md  llm-security.md  privacy.md  providers.md  terms-of-use.md  user-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  app-tokens.css  dock-settings.ts  env.d.ts  index.css  main.ts  router.ts
jana/: __init__.py  hooks.py  install.py  middleware.py  patches.txt  permissions.py  utils.py
jana/api/: agents.py  boot.py  chat.py  content.py  oauth.py  providers.py  terms.py
jana/integrations/: dock_notification.py
jana/services/: chat.py  context.py  language.py  maintenance.py  query.py  rate_limiter.py  terms.py
jana/tests/: __init__.py  test_agent_prompts.py  test_agent_templates.py  test_context.py  test_disclaimer.py  test_guardrails_prompt_builder.py  test_knowledge.py  test_knowledge_extraction.py  test_language.py  test_oauth.py  test_pii_masking.py  test_provider_tiers.py  test_query.py  test_security_validators.py  test_ssrf.py  test_temperature_control.py  test_terms.py  test_tool_annotations.py  test_write_confirmation.py
jana/translations/: af.csv  am.csv  (+67 more)
scripts/: append_translations.py  fill_translations.py  generate_translations.py
(+96 files in other folders)
